atlantis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tools-az
  labels:
    azure.workload.identity/use: "true"
