atlantis/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlantis
  namespace: tools-az
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
  hostnames:
    - atlantis-az.ops.stack.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atlantis
          port: 80
